@@ -87,3 +87,5 @@ echo "Why isn't location info available even after sync? (press Enter)"
 ### What version of git-annex are you using? On what operating system?
 
 git-annex version: 5.20140716-g8c14ba8
+
+> [[fixed|done]] --[[Joey]]
